--- a/fine-tune-model.ipynb
+++ b/fine-tune-model.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -81,77 +81,76 @@
     }
    ],
    "source": [
-    "def make_datapath_list():\n",
-    "    \n",
-    "    rootpath = \"./data/kaggle/Violence\"\n",
+    "def make_datapath_list(rootpath):\n",
     "    \n",
     "    dir_list = os.listdir(rootpath)\n",
     "\n",
     "    return dir_list\n",
     "\n",
     "\n",
-    "train_list = make_datapath_list()\n",
-    "print(train_list)\n"
+    "violent_list = make_datapath_list(\"./data/kaggle/Violent\")\n",
+    "notviolent_list = make_datapath_list(\"./data/kaggle/Non-Violent\")\n",
+    "print(violent_list)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=1280x720 at 0x7F87A80C46D0>, <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=406x536 at 0x7F87A8A11670>, <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=640x360 at 0x7F87A8A11D90>, <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=224x224 at 0x7F8896FD4C10>, <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=360x360 at 0x7F8896FD4490>, <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=640x360 at 0x7F87A80C4490>, <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=834x714 at 0x7F87A80C4B50>, <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=404x716 at 0x7F87A80C4760>, <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=1280x720 at 0x7F87A80C43A0>, <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=406x536 at 0x7F87A80C4DF0>, <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=224x224 at 0x7F87A80C4850>, <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=1280x672 at 0x7F87A80C4F70>, <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=288x360 at 0x7F87A80C43D0>, <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=654x650 at 0x7F87A80C4F40>, <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=728x714 at 0x7F87A80C4FA0>, <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=640x360 at 0x7F87A80C4E20>, <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=1920x1080 at 0x7F87A80C45B0>, <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=320x240 at 0x7F87A7F75430>, <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=408x720 at 0x7F87A7F757C0>, <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=1280x720 at 0x7F87A7F75FD0>]\n"
+      "8000\n",
+      "1000\n",
+      "1000\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "images = []\n",
-    "for f in train_list[:20]:\n",
-    "    images.append(Image.open(f'./data/kaggle/Violence/{f}'))\n",
-    "print(images)"
+    "images_train = []\n",
+    "for f in violent_list[:4000]:\n",
+    "    images_train.append((Image.open(f'./data/kaggle/Violent/{f}'), 1))\n",
+    "\n",
+    "for f in notviolent_list[:4000]:\n",
+    "    images_train.append((Image.open(f'./data/kaggle/Non-Violent/{f}'), 0))\n",
+    "\n",
+    "images_val = []\n",
+    "for f in violent_list[4000:4500]:\n",
+    "    images_val.append((Image.open(f'./data/kaggle/Violent/{f}'), 1))\n",
+    "\n",
+    "for f in notviolent_list[4000:4500]:\n",
+    "    images_val.append((Image.open(f'./data/kaggle/Non-Violent/{f}'), 0))\n",
+    "\n",
+    "images_test = []\n",
+    "for f in violent_list[4500:5000]:\n",
+    "    images_test.append((Image.open(f'./data/kaggle/Violent/{f}'), 1))\n",
+    "\n",
+    "for f in notviolent_list[4500:5000]:\n",
+    "    images_test.append((Image.open(f'./data/kaggle/Non-Violent/{f}'), 0))\n",
+    "\n",
+    "print(len(images_train))\n",
+    "print(len(images_val))\n",
+    "print(len(images_test))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "# Assuming you have your data\n",
-    "X = images\n",
-    "\n",
-    "# Split the data into training and testing sets\n",
-    "# test_size specifies the percentage of data to use for testing (e.g., 0.2 for 20%)\n",
-    "image_train, image_test = train_test_split(X, test_size=0.2, random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[100.84273815  95.59569645  92.2952528 ] [68.51260253 65.91687241 64.64964905]\n"
-     ]
-    }
-   ],
-   "source": [
     "from PIL import ImageStat\n",
     "\n",
+    "randomsample = np.random.choice(len(images_train), 1000, replace=False)\n",
+    "\n",
     "def pil_images_to_numpy(images):\n",
-    "    image_data = [np.array(image.resize((256,256))) for image in images]\n",
+    "    image_data = [np.array(image[0].resize((128,128))) for image in randomsample]\n",
     "    return image_data\n",
     "\n",
-    "image_data = pil_images_to_numpy(image_train)\n",
+    "image_data = pil_images_to_numpy(images_train)\n",
     "\n",
     "# Calculate the mean and standard deviation\n",
     "mean = np.mean(image_data, axis=(0, 1, 2))\n",
@@ -204,10 +203,10 @@
     "\n",
     "# run\n",
     "train_dataset = imageDataset(\n",
-    "    file_list=train_list, transform=ImageTransform(256, mean, stddev), phase='train')\n",
+    "    file_list=images_train, transform=ImageTransform(256, mean, stddev), phase='train')\n",
     "\n",
     "val_dataset = imageDataset(\n",
-    "    file_list=val_list, transform=ImageTransform(256, mean, stddev), phase='val')\n",
+    "    file_list=images_val, transform=ImageTransform(256, mean, stddev), phase='val')\n",
     "\n"
    ]
   },
