fine-tune-model draft

--- a/fine-tune-model.ipynb
+++ b/fine-tune-model.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -138,19 +138,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[103.47768231  97.28840302  92.72237634] [70.92157623 69.25512588 69.97156574]\n"
+     ]
+    }
+   ],
    "source": [
-    "from PIL import ImageStat\n",
-    "\n",
-    "randomsample = np.random.choice(len(images_train), 1000, replace=False)\n",
+    "import random\n",
     "\n",
     "def pil_images_to_numpy(images):\n",
-    "    image_data = [np.array(image[0].resize((128,128))) for image in randomsample]\n",
+    "    image_data = [np.array(image[0].resize((128,128))) for image in images]\n",
     "    return image_data\n",
     "\n",
-    "image_data = pil_images_to_numpy(images_train)\n",
+    "image_data = pil_images_to_numpy(random.sample(images_train, 1000))\n",
     "\n",
     "# Calculate the mean and standard deviation\n",
     "mean = np.mean(image_data, axis=(0, 1, 2))\n",
@@ -160,59 +166,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# imageDataset changed from lungDataset\n",
+    "# mean = (0.5, 0.5, 0.5)\n",
+    "# stddev = (0.5, 0.5, 0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class imageDataset(data.Dataset):\n",
     "\n",
-    "    def __init__(self, file_list, transform=None, phase='train'):\n",
-    "        self.file_list = file_list\n",
+    "    def __init__(self, img_list, transform=None, phase='train'):\n",
+    "        self.img_list = img_list\n",
     "        self.transform = transform\n",
     "        self.phase = phase\n",
     "\n",
     "    def __len__(self):\n",
-    "        return len(self.file_list)\n",
+    "        return len(self.img_list)\n",
     "\n",
     "    def __getitem__(self, index):\n",
     "\n",
     "        # load image\n",
-    "        img_path = self.file_list[index]\n",
-    "        \n",
-    "        img_originalsize = Image.open(img_path)\n",
+    "        img = self.img_list[index][0]\n",
+    "        label = self.img_list[index][1]\n",
+    "\n",
     "        # resize\n",
-    "        img = img_originalsize.resize((256, 256))\n",
+    "        img = img.resize((256, 256))\n",
     "        \n",
-    "        # grey -> color\n",
-    "        img = img.convert(\"L\").convert(\"RGB\")\n",
+    "        # # # grey -> color\n",
+    "        # img = img.convert(\"L\").convert(\"RGB\")\n",
     "\n",
     "        # preprocess\n",
     "        img_transformed = self.transform(\n",
     "            img, self.phase)  # torch.Size([3, 224, 224])\n",
     "\n",
-    "        # label char -> number\n",
-    "        if \"Non-violent\" in img_path:\n",
-    "            label = 0\n",
-    "\n",
-    "        elif \"Violent\" in img_path:\n",
-    "            label = 1\n",
-    "\n",
     "        return img_transformed, label\n",
-    "\n",
     "\n",
     "# run\n",
     "train_dataset = imageDataset(\n",
-    "    file_list=images_train, transform=ImageTransform(256, mean, stddev), phase='train')\n",
+    "    img_list=images_train, transform=ImageTransform(256, mean, stddev), phase='train')\n",
     "\n",
     "val_dataset = imageDataset(\n",
-    "    file_list=images_val, transform=ImageTransform(256, mean, stddev), phase='val')\n",
+    "    img_list=images_val, transform=ImageTransform(256, mean, stddev), phase='val')\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,21 +233,25 @@
     "    val_dataset, batch_size=batch_size, shuffle=False)\n",
     "\n",
     "# put dataloader into dictionary type\n",
-    "dataloaders_dict = {\"train\": train_dataloader, \"val\": val_dataloader}"
+    "dataloaders_dict = {\"train\": train_dataloader, \"val\": val_dataloader}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/awyuan/.pyenv/versions/3.9.18/lib/python3.9/site-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+      "  warnings.warn(\n",
+      "/home/awyuan/.pyenv/versions/3.9.18/lib/python3.9/site-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=VGG16_Weights.IMAGENET1K_V1`. You can also use `weights=VGG16_Weights.DEFAULT` to get the most up-to-date weights.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize the model\n",
     "use_pretrained = True\n",
@@ -294,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,9 +386,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "using device： cuda:0\n",
+      "Epoch 1/10\n",
+      "-------------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 32/32 [00:23<00:00,  1.37it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "val Loss: 0.7010 Acc: 0.5000\n",
+      "Epoch 2/10\n",
+      "-------------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  6%|▌         | 15/250 [00:41<28:35,  7.30s/it]"
+     ]
+    }
+   ],
    "source": [
     "num_epochs=10\n",
     "accuracy_list, loss_list = train_model(net, dataloaders_dict, criterion, optimizer, num_epochs=num_epochs)"
