--- a/fine-tune-model.ipynb
+++ b/fine-tune-model.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -155,48 +155,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/Users/sazzle/Desktop/cv_project/RescueLabHackathon/fine-tune-model.ipynb Cell 7\u001b[0m line \u001b[0;36m6\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sazzle/Desktop/cv_project/RescueLabHackathon/fine-tune-model.ipynb#X22sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     images_train\u001b[39m.\u001b[39mappend((Image\u001b[39m.\u001b[39mopen(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m./data/kaggle/Violent/\u001b[39m\u001b[39m{\u001b[39;00mf\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m), \u001b[39m1\u001b[39m))\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sazzle/Desktop/cv_project/RescueLabHackathon/fine-tune-model.ipynb#X22sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mfor\u001b[39;00m f \u001b[39min\u001b[39;00m notviolent_list[:\u001b[39m4000\u001b[39m]:\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/sazzle/Desktop/cv_project/RescueLabHackathon/fine-tune-model.ipynb#X22sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     images_train\u001b[39m.\u001b[39mappend((Image\u001b[39m.\u001b[39;49mopen(\u001b[39mf\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39m./data/kaggle/Non-Violent/\u001b[39;49m\u001b[39m{\u001b[39;49;00mf\u001b[39m}\u001b[39;49;00m\u001b[39m'\u001b[39;49m), \u001b[39m0\u001b[39m))\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sazzle/Desktop/cv_project/RescueLabHackathon/fine-tune-model.ipynb#X22sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m images_val \u001b[39m=\u001b[39m []\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sazzle/Desktop/cv_project/RescueLabHackathon/fine-tune-model.ipynb#X22sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mfor\u001b[39;00m f \u001b[39min\u001b[39;00m violent_list[\u001b[39m4000\u001b[39m:\u001b[39m4500\u001b[39m]:\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/PIL/Image.py:3259\u001b[0m, in \u001b[0;36mopen\u001b[0;34m(fp, mode, formats)\u001b[0m\n\u001b[1;32m   3256\u001b[0m             \u001b[39mraise\u001b[39;00m\n\u001b[1;32m   3257\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m-> 3259\u001b[0m im \u001b[39m=\u001b[39m _open_core(fp, filename, prefix, formats)\n\u001b[1;32m   3261\u001b[0m \u001b[39mif\u001b[39;00m im \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m formats \u001b[39mis\u001b[39;00m ID:\n\u001b[1;32m   3262\u001b[0m     checked_formats \u001b[39m=\u001b[39m formats\u001b[39m.\u001b[39mcopy()\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/PIL/Image.py:3245\u001b[0m, in \u001b[0;36mopen.<locals>._open_core\u001b[0;34m(fp, filename, prefix, formats)\u001b[0m\n\u001b[1;32m   3243\u001b[0m \u001b[39melif\u001b[39;00m result:\n\u001b[1;32m   3244\u001b[0m     fp\u001b[39m.\u001b[39mseek(\u001b[39m0\u001b[39m)\n\u001b[0;32m-> 3245\u001b[0m     im \u001b[39m=\u001b[39m factory(fp, filename)\n\u001b[1;32m   3246\u001b[0m     _decompression_bomb_check(im\u001b[39m.\u001b[39msize)\n\u001b[1;32m   3247\u001b[0m     \u001b[39mreturn\u001b[39;00m im\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/PIL/JpegImagePlugin.py:821\u001b[0m, in \u001b[0;36mjpeg_factory\u001b[0;34m(fp, filename)\u001b[0m\n\u001b[1;32m    820\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mjpeg_factory\u001b[39m(fp\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, filename\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m):\n\u001b[0;32m--> 821\u001b[0m     im \u001b[39m=\u001b[39m JpegImageFile(fp, filename)\n\u001b[1;32m    822\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m    823\u001b[0m         mpheader \u001b[39m=\u001b[39m im\u001b[39m.\u001b[39m_getmp()\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/PIL/ImageFile.py:117\u001b[0m, in \u001b[0;36mImageFile.__init__\u001b[0;34m(self, fp, filename)\u001b[0m\n\u001b[1;32m    115\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m    116\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 117\u001b[0m         \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_open()\n\u001b[1;32m    118\u001b[0m     \u001b[39mexcept\u001b[39;00m (\n\u001b[1;32m    119\u001b[0m         \u001b[39mIndexError\u001b[39;00m,  \u001b[39m# end of data\u001b[39;00m\n\u001b[1;32m    120\u001b[0m         \u001b[39mTypeError\u001b[39;00m,  \u001b[39m# end of data (ord)\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    123\u001b[0m         struct\u001b[39m.\u001b[39merror,\n\u001b[1;32m    124\u001b[0m     ) \u001b[39mas\u001b[39;00m v:\n\u001b[1;32m    125\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mSyntaxError\u001b[39;00m(v) \u001b[39mfrom\u001b[39;00m \u001b[39mv\u001b[39;00m\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/PIL/JpegImagePlugin.py:372\u001b[0m, in \u001b[0;36mJpegImageFile._open\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    370\u001b[0m i \u001b[39m=\u001b[39m s[\u001b[39m0\u001b[39m]\n\u001b[1;32m    371\u001b[0m \u001b[39mif\u001b[39;00m i \u001b[39m==\u001b[39m \u001b[39m0xFF\u001b[39m:\n\u001b[0;32m--> 372\u001b[0m     s \u001b[39m=\u001b[39m s \u001b[39m+\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfp\u001b[39m.\u001b[39mread(\u001b[39m1\u001b[39m)\n\u001b[1;32m    373\u001b[0m     i \u001b[39m=\u001b[39m i16(s)\n\u001b[1;32m    374\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    375\u001b[0m     \u001b[39m# Skip non-0xFF junk\u001b[39;00m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "images_train = []\n",
     "for f in violent_list[:4000]:\n",
-    "    images_train.append((Image.open(f), 1))\n",
+    "    images_train.append((Image.open(f'./data/kaggle/Violent/{f}'), 1))\n",
     "\n",
     "for f in notviolent_list[:4000]:\n",
-    "    images_train.append((Image.open(f), 0))\n",
+    "    images_train.append((Image.open(f'./data/kaggle/Non-Violent/{f}'), 0))\n",
     "\n",
     "images_val = []\n",
     "for f in violent_list[4000:4500]:\n",
-    "    images_val.append((Image.open(f), 1))\n",
+    "    images_val.append((Image.open(f'./data/kaggle/Violent/{f}'), 1))\n",
     "\n",
     "for f in notviolent_list[4000:4500]:\n",
-    "    images_val.append((Image.open(f), 0))\n",
+    "    images_val.append((Image.open(f'./data/kaggle/Non-Violent/{f}'), 0))\n",
     "\n",
     "images_test = []\n",
     "for f in violent_list[4500:5000]:\n",
-    "    images_test.append((Image.open(f), 1))\n",
+    "    images_test.append((Image.open(f'./data/kaggle/Violent/{f}'), 1))\n",
     "\n",
     "for f in notviolent_list[4500:5000]:\n",
-    "    images_test.append((Image.open(f), 0))\n",
+    "    images_test.append((Image.open(f'./data/kaggle/Non-Violent/{f}'), 0))\n",
     "\n",
     "print(len(images_train))\n",
     "print(len(images_val))\n",
@@ -205,14 +188,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[103.47768231  97.28840302  92.72237634] [70.92157623 69.25512588 69.97156574]\n"
+     "ename": "ValueError",
+     "evalue": "setting an array element with a sequence. The requested array has an inhomogeneous shape after 3 dimensions. The detected shape was (156, 128, 128) + inhomogeneous part.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/Users/sazzle/Desktop/cv_project/RescueLabHackathon/fine-tune-model.ipynb Cell 8\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/sazzle/Desktop/cv_project/RescueLabHackathon/fine-tune-model.ipynb#X23sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m     \u001b[39mif\u001b[39;00m img\u001b[39m.\u001b[39mshape \u001b[39m==\u001b[39m (\u001b[39m156\u001b[39m, \u001b[39m128\u001b[39m, \u001b[39m128\u001b[39m):\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/sazzle/Desktop/cv_project/RescueLabHackathon/fine-tune-model.ipynb#X23sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m         \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mhihi\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/sazzle/Desktop/cv_project/RescueLabHackathon/fine-tune-model.ipynb#X23sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m mean2 \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mmean(image_data2, axis\u001b[39m=\u001b[39;49m(\u001b[39m0\u001b[39;49m, \u001b[39m1\u001b[39;49m, \u001b[39m2\u001b[39;49m))\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/sazzle/Desktop/cv_project/RescueLabHackathon/fine-tune-model.ipynb#X23sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m stddev2 \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mstd(image_data2, axis\u001b[39m=\u001b[39m(\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m))\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/sazzle/Desktop/cv_project/RescueLabHackathon/fine-tune-model.ipynb#X23sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39monline dataset stats: \u001b[39m\u001b[39m'\u001b[39m,mean, stddev)\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/numpy/core/fromnumeric.py:3504\u001b[0m, in \u001b[0;36mmean\u001b[0;34m(a, axis, dtype, out, keepdims, where)\u001b[0m\n\u001b[1;32m   3501\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m   3502\u001b[0m         \u001b[39mreturn\u001b[39;00m mean(axis\u001b[39m=\u001b[39maxis, dtype\u001b[39m=\u001b[39mdtype, out\u001b[39m=\u001b[39mout, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m-> 3504\u001b[0m \u001b[39mreturn\u001b[39;00m _methods\u001b[39m.\u001b[39;49m_mean(a, axis\u001b[39m=\u001b[39;49maxis, dtype\u001b[39m=\u001b[39;49mdtype,\n\u001b[1;32m   3505\u001b[0m                       out\u001b[39m=\u001b[39;49mout, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/numpy/core/_methods.py:102\u001b[0m, in \u001b[0;36m_mean\u001b[0;34m(a, axis, dtype, out, keepdims, where)\u001b[0m\n\u001b[1;32m    101\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_mean\u001b[39m(a, axis\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, dtype\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, out\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, keepdims\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m, \u001b[39m*\u001b[39m, where\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m):\n\u001b[0;32m--> 102\u001b[0m     arr \u001b[39m=\u001b[39m asanyarray(a)\n\u001b[1;32m    104\u001b[0m     is_float16_result \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n\u001b[1;32m    106\u001b[0m     rcount \u001b[39m=\u001b[39m _count_reduce_items(arr, axis, keepdims\u001b[39m=\u001b[39mkeepdims, where\u001b[39m=\u001b[39mwhere)\n",
+      "\u001b[0;31mValueError\u001b[0m: setting an array element with a sequence. The requested array has an inhomogeneous shape after 3 dimensions. The detected shape was (156, 128, 128) + inhomogeneous part."
      ]
     }
    ],
@@ -224,11 +213,18 @@
     "    return image_data\n",
     "\n",
     "image_data = pil_images_to_numpy(random.sample(images_train, 1000))\n",
+    "image_data2 = pil_images_to_numpy(random.sample(collected_img_train, len(collected_img_train)))\n",
     "\n",
     "# Calculate the mean and standard deviation\n",
     "mean = np.mean(image_data, axis=(0, 1, 2))\n",
     "stddev = np.std(image_data, axis=(0, 1, 2))\n",
-    "print(mean, stddev)"
+    "for img in image_data:\n",
+    "    if img.shape == (156, 128, 128):\n",
+    "        print('hihi')\n",
+    "mean2 = np.mean(image_data2, axis=(0, 1, 2))\n",
+    "stddev2 = np.std(image_data2, axis=(0, 1, 2))\n",
+    "print('online dataset stats: ',mean, stddev)\n",
+    "print('collected dataset stats: ',mean2, stddev2)"
    ]
   },
   {
