--- a/fine-tune-model.ipynb
+++ b/fine-tune-model.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,53 +179,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "images_train = []\n",
-    "for f in violent_list[:4000]:\n",
-    "    images_train.append((Image.open(f'./data/kaggle/Violent/{f}'), 1))\n",
+    "# images_train = []\n",
+    "# for f in violent_list[:4000]:\n",
+    "#     images_train.append((Image.open(f'./data/kaggle/Violent/{f}'), 1))\n",
     "\n",
-    "for f in notviolent_list[:4000]:\n",
-    "    images_train.append((Image.open(f'./data/kaggle/Non-Violent/{f}'), 0))\n",
+    "# for f in notviolent_list[:4000]:\n",
+    "#     images_train.append((Image.open(f'./data/kaggle/Non-Violent/{f}'), 0))\n",
     "\n",
-    "images_val = []\n",
-    "for f in violent_list[4000:4500]:\n",
-    "    images_val.append((Image.open(f'./data/kaggle/Violent/{f}'), 1))\n",
+    "# images_val = []\n",
+    "# for f in violent_list[4000:4500]:\n",
+    "#     images_val.append((Image.open(f'./data/kaggle/Violent/{f}'), 1))\n",
     "\n",
-    "for f in notviolent_list[4000:4500]:\n",
-    "    images_val.append((Image.open(f'./data/kaggle/Non-Violent/{f}'), 0))\n",
+    "# for f in notviolent_list[4000:4500]:\n",
+    "#     images_val.append((Image.open(f'./data/kaggle/Non-Violent/{f}'), 0))\n",
     "\n",
-    "images_test = []\n",
-    "for f in violent_list[4500:5000]:\n",
-    "    images_test.append((Image.open(f'./data/kaggle/Violent/{f}'), 1))\n",
+    "# images_test = []\n",
+    "# for f in violent_list[4500:5000]:\n",
+    "#     images_test.append((Image.open(f'./data/kaggle/Violent/{f}'), 1))\n",
     "\n",
-    "for f in notviolent_list[4500:5000]:\n",
-    "    images_test.append((Image.open(f'./data/kaggle/Non-Violent/{f}'), 0))\n",
+    "# for f in notviolent_list[4500:5000]:\n",
+    "#     images_test.append((Image.open(f'./data/kaggle/Non-Violent/{f}'), 0))\n",
     "\n",
-    "print(len(images_train))\n",
-    "print(len(images_val))\n",
-    "print(len(images_test))\n"
+    "# print(len(images_train))\n",
+    "# print(len(images_val))\n",
+    "# print(len(images_test))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "setting an array element with a sequence. The requested array has an inhomogeneous shape after 3 dimensions. The detected shape was (156, 128, 128) + inhomogeneous part.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m/Users/sazzle/Desktop/cv_project/RescueLabHackathon/fine-tune-model.ipynb Cell 8\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/sazzle/Desktop/cv_project/RescueLabHackathon/fine-tune-model.ipynb#X23sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m     \u001b[39mif\u001b[39;00m img\u001b[39m.\u001b[39mshape \u001b[39m==\u001b[39m (\u001b[39m156\u001b[39m, \u001b[39m128\u001b[39m, \u001b[39m128\u001b[39m):\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/sazzle/Desktop/cv_project/RescueLabHackathon/fine-tune-model.ipynb#X23sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m         \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mhihi\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/sazzle/Desktop/cv_project/RescueLabHackathon/fine-tune-model.ipynb#X23sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m mean2 \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mmean(image_data2, axis\u001b[39m=\u001b[39;49m(\u001b[39m0\u001b[39;49m, \u001b[39m1\u001b[39;49m, \u001b[39m2\u001b[39;49m))\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/sazzle/Desktop/cv_project/RescueLabHackathon/fine-tune-model.ipynb#X23sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m stddev2 \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mstd(image_data2, axis\u001b[39m=\u001b[39m(\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m))\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/sazzle/Desktop/cv_project/RescueLabHackathon/fine-tune-model.ipynb#X23sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39monline dataset stats: \u001b[39m\u001b[39m'\u001b[39m,mean, stddev)\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/numpy/core/fromnumeric.py:3504\u001b[0m, in \u001b[0;36mmean\u001b[0;34m(a, axis, dtype, out, keepdims, where)\u001b[0m\n\u001b[1;32m   3501\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m   3502\u001b[0m         \u001b[39mreturn\u001b[39;00m mean(axis\u001b[39m=\u001b[39maxis, dtype\u001b[39m=\u001b[39mdtype, out\u001b[39m=\u001b[39mout, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m-> 3504\u001b[0m \u001b[39mreturn\u001b[39;00m _methods\u001b[39m.\u001b[39;49m_mean(a, axis\u001b[39m=\u001b[39;49maxis, dtype\u001b[39m=\u001b[39;49mdtype,\n\u001b[1;32m   3505\u001b[0m                       out\u001b[39m=\u001b[39;49mout, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/numpy/core/_methods.py:102\u001b[0m, in \u001b[0;36m_mean\u001b[0;34m(a, axis, dtype, out, keepdims, where)\u001b[0m\n\u001b[1;32m    101\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_mean\u001b[39m(a, axis\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, dtype\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, out\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, keepdims\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m, \u001b[39m*\u001b[39m, where\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m):\n\u001b[0;32m--> 102\u001b[0m     arr \u001b[39m=\u001b[39m asanyarray(a)\n\u001b[1;32m    104\u001b[0m     is_float16_result \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n\u001b[1;32m    106\u001b[0m     rcount \u001b[39m=\u001b[39m _count_reduce_items(arr, axis, keepdims\u001b[39m=\u001b[39mkeepdims, where\u001b[39m=\u001b[39mwhere)\n",
-      "\u001b[0;31mValueError\u001b[0m: setting an array element with a sequence. The requested array has an inhomogeneous shape after 3 dimensions. The detected shape was (156, 128, 128) + inhomogeneous part."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "collected dataset stats:  [131.83282588 119.25742947 110.7856324 ] [76.43071133 72.83678782 73.15471327]\n"
      ]
     }
    ],
@@ -236,19 +230,16 @@
     "    image_data = [np.array(image[0].resize((128,128))) for image in images]\n",
     "    return image_data\n",
     "\n",
-    "image_data = pil_images_to_numpy(random.sample(images_train, 1000))\n",
-    "image_data2 = pil_images_to_numpy(random.sample(collected_img_train, len(collected_img_train)))\n",
+    "# image_data = pil_images_to_numpy(random.sample(images_train, 1000))\n",
+    "image_data = pil_images_to_numpy(random.sample(collected_img_train, len(collected_img_train)))\n",
     "\n",
-    "# Calculate the mean and standard deviation\n",
+    "# # Calculate the mean and standard deviation\n",
+    "# mean = np.mean(image_data, axis=(0, 1, 2))\n",
+    "# stddev = np.std(image_data, axis=(0, 1, 2))\n",
     "mean = np.mean(image_data, axis=(0, 1, 2))\n",
     "stddev = np.std(image_data, axis=(0, 1, 2))\n",
-    "for img in image_data:\n",
-    "    if img.shape == (156, 128, 128):\n",
-    "        print('hihi')\n",
-    "mean2 = np.mean(image_data2, axis=(0, 1, 2))\n",
-    "stddev2 = np.std(image_data2, axis=(0, 1, 2))\n",
-    "print('online dataset stats: ',mean, stddev)\n",
-    "print('collected dataset stats: ',mean2, stddev2)"
+    "# print('online dataset stats: ', mean, stddev)\n",
+    "print('collected dataset stats: ', mean, stddev)"
    ]
   },
   {
@@ -263,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,16 +288,16 @@
     "\n",
     "# run\n",
     "train_dataset = imageDataset(\n",
-    "    img_list=images_train, transform=ImageTransform(256, mean, stddev), phase='train')\n",
+    "    img_list=collected_img_train, transform=ImageTransform(256, mean, stddev), phase='train')\n",
     "\n",
     "val_dataset = imageDataset(\n",
-    "    img_list=images_val, transform=ImageTransform(256, mean, stddev), phase='val')\n",
+    "    img_list=collected_img_val, transform=ImageTransform(256, mean, stddev), phase='val')\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,16 +316,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/awyuan_umass_edu/.conda/envs/llm/lib/python3.9/site-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+      "/home/awyuan/.pyenv/versions/3.9.18/lib/python3.9/site-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
       "  warnings.warn(\n",
-      "/home/awyuan_umass_edu/.conda/envs/llm/lib/python3.9/site-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=VGG16_Weights.IMAGENET1K_V1`. You can also use `weights=VGG16_Weights.DEFAULT` to get the most up-to-date weights.\n",
+      "/home/awyuan/.pyenv/versions/3.9.18/lib/python3.9/site-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=VGG16_Weights.IMAGENET1K_V1`. You can also use `weights=VGG16_Weights.DEFAULT` to get the most up-to-date weights.\n",
       "  warnings.warn(msg)\n"
      ]
     }
