--- a/fine-tune-model.ipynb
+++ b/fine-tune-model.ipynb
@@ -31,7 +31,9 @@
     "import torch.optim as optim\n",
     "import torch.utils.data as data\n",
     "from torchvision import models, transforms\n",
-    "import pandas as pd\n"
+    "import pandas as pd\n",
+    "\n",
+    "\n"
    ]
   },
   {
