--- a/fine-tune-model.ipynb
+++ b/fine-tune-model.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,14 +31,12 @@
     "import torch.optim as optim\n",
     "import torch.utils.data as data\n",
     "from torchvision import models, transforms\n",
-    "import pandas as pd\n",
-    "\n",
-    "\n"
+    "import pandas as pd\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,51 +68,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "size of non-violent:  708\n",
-      "size of violent:  86\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "import glob\n",
-    "\n",
-    "# Get the current directory\n",
-    "current_directory = \"./data/kaggle/collected/non_violent\"\n",
-    "\n",
-    "# Use glob to find all .jpg files in the current directory\n",
-    "collected_nv = glob.glob(os.path.join(current_directory, '*.jpg'))\n",
-    "current_directory2 = \"./data/kaggle/collected/violent\"\n",
-    "\n",
-    "# Use glob to find all .jpg files in the current directory\n",
-    "collected_v = glob.glob(os.path.join(current_directory2, '*.jpg'))\n",
-    "\n",
-    "# jpg_files now contains a list of all .jpg files in the current directory\n",
-    "print('size of non-violent: ', len(collected_nv))\n",
-    "print('size of violent: ', len(collected_v))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "size of non-violent:  708\n",
-      "size of violent:  98\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import glob\n",
@@ -136,7 +92,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import os\n",
+    "# import glob\n",
+    "\n",
+    "# # Get the current directory\n",
+    "# current_directory = \"./data/kaggle/collected/non_violent\"\n",
+    "\n",
+    "# # Use glob to find all .jpg files in the current directory\n",
+    "# collected_nv = glob.glob(os.path.join(current_directory, '*'))\n",
+    "# current_directory2 = \"./data/kaggle/collected/violent\"\n",
+    "\n",
+    "# # Use glob to find all .jpg files in the current directory\n",
+    "# collected_v = glob.glob(os.path.join(current_directory2, '*'))\n",
+    "\n",
+    "# # jpg_files now contains a list of all .jpg files in the current directory\n",
+    "# print('size of non-violent: ', len(collected_nv))\n",
+    "# print('size of violent: ', len(collected_v))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,32 +194,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "setting an array element with a sequence. The requested array has an inhomogeneous shape after 3 dimensions. The detected shape was (136, 128, 128) + inhomogeneous part.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 13\u001b[0m\n\u001b[1;32m      8\u001b[0m image_data \u001b[38;5;241m=\u001b[39m pil_images_to_numpy(random\u001b[38;5;241m.\u001b[39msample(collected_img_train, \u001b[38;5;28mlen\u001b[39m(collected_img_train)))\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# # Calculate the mean and standard deviation\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m# mean = np.mean(image_data, axis=(0, 1, 2))\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# stddev = np.std(image_data, axis=(0, 1, 2))\u001b[39;00m\n\u001b[0;32m---> 13\u001b[0m mean \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmean\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimage_data\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     14\u001b[0m stddev \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mstd(image_data, axis\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m))\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m# print('online dataset stats: ', mean, stddev)\u001b[39;00m\n",
-      "File \u001b[0;32m~/.conda/envs/llm/lib/python3.9/site-packages/numpy/core/fromnumeric.py:3504\u001b[0m, in \u001b[0;36mmean\u001b[0;34m(a, axis, dtype, out, keepdims, where)\u001b[0m\n\u001b[1;32m   3501\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   3502\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m mean(axis\u001b[38;5;241m=\u001b[39maxis, dtype\u001b[38;5;241m=\u001b[39mdtype, out\u001b[38;5;241m=\u001b[39mout, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m-> 3504\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_methods\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_mean\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   3505\u001b[0m \u001b[43m                      \u001b[49m\u001b[43mout\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mout\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/.conda/envs/llm/lib/python3.9/site-packages/numpy/core/_methods.py:102\u001b[0m, in \u001b[0;36m_mean\u001b[0;34m(a, axis, dtype, out, keepdims, where)\u001b[0m\n\u001b[1;32m    101\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_mean\u001b[39m(a, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, dtype\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, out\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, keepdims\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m, \u001b[38;5;241m*\u001b[39m, where\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m):\n\u001b[0;32m--> 102\u001b[0m     arr \u001b[38;5;241m=\u001b[39m \u001b[43masanyarray\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    104\u001b[0m     is_float16_result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m    106\u001b[0m     rcount \u001b[38;5;241m=\u001b[39m _count_reduce_items(arr, axis, keepdims\u001b[38;5;241m=\u001b[39mkeepdims, where\u001b[38;5;241m=\u001b[39mwhere)\n",
-      "\u001b[0;31mValueError\u001b[0m: setting an array element with a sequence. The requested array has an inhomogeneous shape after 3 dimensions. The detected shape was (136, 128, 128) + inhomogeneous part."
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "def pil_images_to_numpy(images):\n",
+    "    image_data = [np.array(image[0].resize((128,128))) for image in images]\n",
+    "    return image_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import random\n",
     "\n",
-    "def pil_images_to_numpy(images):\n",
-    "    image_data = [np.array(image[0].resize((128,128))) for image in images]\n",
-    "    return image_data\n",
-    "\n",
     "# image_data = pil_images_to_numpy(random.sample(images_train, 1000))\n",
-    "image_data = pil_images_to_numpy(random.sample(collected_img_train, len(collected_img_train)))\n",
+    "image_data = pil_images_to_numpy(collected_img_train)\n",
     "\n",
     "# # Calculate the mean and standard deviation\n",
     "# mean = np.mean(image_data, axis=(0, 1, 2))\n",
@@ -471,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
